fixing an overflow class for impala details (bug 676709)

--- a/media/css/impala/addon_details.less
+++ b/media/css/impala/addon_details.less
@@ -346,7 +346,7 @@
     h1 {
         line-height: 25px;
     }
-    .copy {
+    .prose {
         height: 400px;
         padding: 1em 0 0;
         overflow: auto;
